Fixed top search bar, and shave plugin  for truncating strings

--- a/app/sass/_extrasmall.scss
+++ b/app/sass/_extrasmall.scss
@@ -44,7 +44,7 @@
             margin-top: 3rem;
             margin-bottom: 2rem;
             .album__list__album--item {
-                height: 15rem;
+                // height: 15rem;
                 .album__list__album--thumbnail{
                     img{
                         margin-top:0;
